tests/parser/invalidinput/multidecl.idp
#include <mx>

vocabulary V{
	type Struct isa
}